# L1_BlackBook

./: .env.example  .gitignore  5-wallet.md  AUDIT.md  BB-3-SHARD-WALLET-EXPLAINED.md  BLACKBOOK_WALLET_SECURITY.md  BRIDGE_GUIDE.md  Cargo.toml  DOMAIN_SEPARATION.md  L1_PROTOCOL_ANALYSIS.md  L2_READINESS_ASSESSMENT.md  LAYER1_LAYER2_BRIDGE.md  MANIFESTO.md  MANIFESTO_context.md  NEXT-STEPS.md  PREDICTION_MARKET_GUIDE.md  PRODUCTION_SECURITY_FEATURES.md  SDK_UPDATE_SUMMARY.md  SSS2wallet.md  TEST_ACCOUNTS.txt  TEST_RESULTS_20260204_203741.txt  WALLET_FRONTEND_READINESS.md  WALLET_PRODUCTION_READINESS.md  WEEK1_PROGRESS.md  blackbook-checkpoints-tests.txt  blackbook-wallet-implementation.md  blackbook-wallet.md  blackbook_wallet_explained.md  blackbook_wallet_implementation.md  blockchain_backup.json  blockchain_data.json  borsch.md  build.rs  build_errors.txt  check_max_shards.ps1  create_apollo.py  creation_debug.txt  creation_log.txt  creation_log_final.txt  creation_ver3.txt  (+37 more)
.cargo/: config.toml
benches/: tps_benchmarks.rs
blockchain_data/: blockchain.redb
blockchain_sled/: db  snap.0000000000000648  snap.00000000000008DB  snap.00000000000008ED  snap.0000000000000D1A  snap.00000000000012B5  snap.0000000000001A2D  snap.0000000000001B1A  snap.00000000000024AE  snap.0000000000002E20  snap.000000000000437D  snap.000000000000D5BD
docs/: BURN_GUIDE.md  DISTRIBUTED_CONSENSUS_NETWORK.md  FRONTEND_INTEGRATION.md  FRONTEND_SDK_INTEGRATION.md  HOT_UPGRADE_GUIDE.md  L1-microtx.md  L2_CREDIT_INTEGRATION.md  MAINNET_TESTNET_PLAN.md  P2P_TOWER_IMPLEMENTATION_ROADMAP.md  POH_INTEGRATION_GUIDE.md  PRODUCTION_READINESS_100.md  USDC_BACKED_TOKENOMICS.md  VAULT_KMS_REDUNDANCY_IMPLEMENTATION.md  bridge-l1-l2.md
examples/: create_real_wallets.rs  decrypt_verify_max.rs  seed_users.rs  verify_max.rs
migrations/: add_fork_architecture_v2.sql
proto/: settlement.proto
protocol/: blockchain.rs  blockchain_state.rs  helpers.rs  mod.rs  persistence.rs
real_wallets/: Max_wallet.json
runtime/: consensus.rs  core.rs  mod.rs  poh_service.rs
sdk/: Mac-test-wallet.md  README.md  SSS_RECOVERY_GUIDE.md  TEST_ACCOUNTS.txt  TEST_GUIDE.md  WALLET_SECURITY.md  alice-bob-betting.js  alice-to-bob.js  apollo-security-hardening.js  blackbook-react.jsx  blackbook-wallet-sdk-v2.js  blackbook-wallet-sdk.js  blackbook_sdk.js  bob-mac-live-transfer.js  bob-mac-transfer-test.js  build_errors.txt  check-all-balances.js  comprehensive-test-suite.js  credit-prediction-actions-sdk.js  dealer-sdk copy.js  dealer-sdk.js  dealer_bridge.js  domain-separation-example.js  enhanced-secure-wallet.js  generate-dealer-account.js  generate-fresh-mac-wallet.js  generate-mac-vault-wallet.js  generate-test-accounts.js  l1-l2-integration-sdk.js  l2-credit-sdk.js  l2_integration-sdk.js  ledger-sdk.js  mac-secure-wallet.js  mac-wallet-fresh-public.json  mac-wallet-fresh.json  mac-wallet-v2-full.json  mac-wallet-v2-vault.json  macwallet.txt  migrate-mac-wallet.js  mnemonic-wallet.js  (+61 more)
sdk/blockchain_sled/: db
sdk/tests/: README.md  TEST_RESULTS.md  alice-wallet.json  alice-zkp-wallet.json  all-5-wallets.json  apollo-wallet-data.json  apollo-wallet.json  apollo-zkp-wallet.json  bob-wallet.json  bob-zkp-wallet.json  check-all-balances.js  comprehensive-3-shard-security-test.js  create-mac-apollo-zkp.js  create-zkp-wallets.js  dealer-wallet.json  dealer-zkp-wallet.json  demo-ideal-hybrid.js  generate-5-wallets.js  integration-test-results.json  l1-l2-integration.test.js  mac-apollo-credentials.json  mac-wallet.json  mac-zkp-wallet.json  migrate-to-zkp.js  mint-mac-apollo.js  register-apollo.js  run-all-tests.js  run-all.ps1  sign-with-mnemonic.js  sign-zkp-challenge.js  simplified-3-shard-vault-test.js  smoke-test.js  test-00-mint-initial-funds.js  test-01-check-balances.js  test-01-l1-health.js  test-01-server-health.js  test-02-l1-balances.js  test-02-valid-transactions.js  test-02-wallet-creation.js  test-03-l2-health.js  (+35 more)
sql/: profiles.sql  user_vault.sql
src/: lib.rs  main.rs  main_v2.rs  main_v3.rs  main_v4.rs  poh_blockchain.rs  social_mining.rs  supabase.rs  vault_manager.rs
src/consensus/: block_proposal.rs  fork_choice.rs  hot_upgrades.rs  mod.rs  p2p.rs  sync.rs  tower_bft.rs
src/grpc/: mod.rs  validator.rs
src/integration/: context.rs  mod.rs  mpc_auth.rs  supabase_connector.rs  unified_auth.rs
src/routes_v2/: admin.rs  auth.rs  bridge.rs  bridge_simplified.rs  credit.rs  markets.rs  mod.rs  rpc.rs  services.rs  social.rs  transfer.rs  wallet.rs
src/rpc/: cross_layer_rpc.rs  internal_rpc.rs  mod.rs  settlement.rs  signed_transaction.rs
src/settlement/: batch.rs  claims.rs  merkle.rs  mod.rs
src/storage/: bridge.rs  merkle.rs  mod.rs  persistent.rs  snapshot.rs  token_validator.rs
src/unified_wallet/: accounts.rs  dealer.rs  dkg.rs  handlers.rs  mod.rs  opaque_auth.rs  oracle.rs  storage.rs  test_accounts.txt  tss.rs  types.rs
src/usdc/: mod.rs  oracle.rs  reserve.rs
src/vault/: blackbook-policy.hcl  mod.rs
src/wallet_mnemonic/: handlers.rs  mnemonic.rs  mod.rs  signer.rs  sss.rs
src/wallet_unified/: handlers.rs  mod.rs  opaque_impl.rs  security.rs
tests/: CharlieandDavid.md  alice_bob_e2e_tests.rs  alice_bob_integration_tests.rs  alice_bob_real_accounts.rs  auth_tests.rs  blackbook_wallet_tests.rs  blockchain_core_tests.rs  blockchain_tests.rs  bridge_escrow_tests.rs  consensus_tests.rs  daily_reward_tests.rs  dealer_integration_test.mjs  domain_separation_tests.rs  l1_l2_full_test.js  persistence_tests.rs  social_mining_tests.rs  test_helpers.rs  transaction_pipeline_tests.rs  wallet_collision_tests.rs  wallet_frontend_integration_tests.rs  wallet_integration_tests.rs  wallet_production_tests.rs  wallet_security_tests.rs  wallet_tests.rs
tests/accounts/: README.txt  alice-to-bob.js  alice.txt  apollo.txt  dealer-to-mac.js  dealer.txt  mac.txt
tests/attacks/: README.md  dao-reentrancy-attack.js  package-lock.json  package.json  replay-attack.js  run-all-attacks.js
tests/js/: README.md  (+24 more)
usdc/: bridge.rs
vault/: README.md  docker-compose.yml  setup-vault-dev.ps1  setup-vault-dev.sh
(+31 files in other folders)
