[package]
name = "layer1"
version = "5.0.0"
edition = "2021"
default-run = "layer1"

[features]
default = []
# Enable this feature for development admin endpoints (mint/burn)
# cargo run --features unsafe_admin
unsafe_admin = []

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "signal", "macros", "net", "time", "sync"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Structured logging (production-grade observability)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "1.3", features = ["derive"] }
thiserror = "1.0"

# Cryptography — Ed25519 + SHA-256 PoH chain
sha2 = "0.10"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
curve25519-dalek = { version = "4.1", features = ["group"] }
getrandom = "0.2"
once_cell = "1.19"

# ═══════════════════════════════════════════════════════════════
# FUTURE: FROST TSS (Hot Upgrade Phase 2)
# ═══════════════════════════════════════════════════════════════
# FROST Institutional Wallets will be added via hot upgrade after mainnet launch
# See docs/HOT_UPGRADE_GUIDE.md for implementation roadmap

# BLAKE3 for fast hashing (wallet addresses, verification)
blake3 = "1.5"

# Rand compatibility for FROST (uses rand_core 0.6)
rand_core = "0.6"

# BIP-39 / SLIP-0010 for hardware wallet compatible key derivation
bip39 = "2.0"
slip10_ed25519 = "0.1"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }

# Vault encryption - AES-256-GCM + Argon2id KDF
aes-gcm = "0.10"
argon2 = "0.5"

# Async trait support
async-trait = "0.1"
zeroize = { version = "1.7", features = ["derive"] }

# HashiCorp Vault integration (production pepper retrieval)
vaultrs = "0.7"

# Parallel processing - Sealevel-style execution
rayon = "1.10"
crossbeam = "0.8"
dashmap = "6.0"
parking_lot = "0.12"
num_cpus = "1.16"

# Networking (QUIC for speed) - Optional for now, enable later
# quinn = "0.11"

# Utilities
rand = "0.8.5"
uuid = { version = "1.0", features = ["serde", "v4"] }
hex = "0.4"
lru = "0.12"
chrono = { version = "0.4.41", features = ["serde"] }
md5 = "0.7"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
base64 = "0.21"
fastrand = "2.0"
lazy_static = "1.4"

# Channels for Gulf Stream transaction forwarding
flume = "0.11"

# Memory-mapped files for Cloudbreak account database
memmap2 = "0.9"

# Atomic operations for fine-grained locking
atomic = "0.6"

# ═══════════════════════════════════════════════════════════════
# PRODUCTION STORAGE LAYER (ReDB + Merkle Trie)
# ═══════════════════════════════════════════════════════════════
# ReDB - Pure Rust embedded key-value store with MVCC
# ACID transactions, single-writer/multi-reader, zero-copy reads
redb = "2.4"

# Merkle Tree for state roots and light client proofs
rs_merkle = "1.4"

# NOTE: Using Borsh (already in deps) for serialization - Solana-compatible
# bincode removed - Borsh is deterministic (required for Merkle proofs)

# ═══════════════════════════════════════════════════════════════
# PHASE 9: P2P DISTRIBUTED NETWORK (Proof of Engagement)
# ═══════════════════════════════════════════════════════════════
# libp2p - Industry-standard P2P (Ethereum 2.0, IPFS, Polkadot)
libp2p = { version = "0.54", features = [
    "tokio",
    "gossipsub",      # Efficient message propagation
    "kad",            # Kademlia DHT for peer discovery
    "mdns",           # Local network discovery
    "noise",          # Encryption
    "yamux",          # Multiplexing
    "tcp",            # TCP transport
    "identify",       # Peer identification
    "ping",           # Health checks
    "macros",
] }
futures = "0.3"
void = "1.0"

# Unix domain sockets for high-speed internal IPC
# (gRPC over UDS for validator-to-validator communication)
prost = "0.13"
tonic = { version = "0.12", features = ["transport"] }
tonic-build = "0.12"
frost-ed25519 = "2.2.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto", "use_pem"] }
supabase-jwt = "0.1.1"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
tempfile = "3.10"

[build-dependencies]
# Protocol Buffer compilation
tonic-build = "0.12"

[lib]
name = "layer1"
path = "src/lib.rs"

[[bin]]
name = "layer1"
path = "src/main.rs"

# ═══════════════════════════════════════════════════════════════
# PROFILE CONFIGURATION - Fix Windows linker crashes
# ═══════════════════════════════════════════════════════════════
# Debug builds on Windows crash link.exe due to excessive debug symbols.
# Solution: Disable debug info entirely for dev builds.

[profile.dev]
# CRITICAL: Set to 0 to completely disable debug symbols (fixes Windows link.exe crash)
debug = 0
# Enable optimizations even in debug (faster builds, smaller binaries)
opt-level = 1
# DISABLE incremental compilation to avoid linker errors
incremental = false
# Use more codegen units to avoid symbol conflicts
codegen-units = 256

[profile.dev.package."*"]
# Optimize all dependencies in debug mode
opt-level = 2
debug = 0

[profile.release]
# Full optimizations for production
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
